[package]
name = "ord"
description = "◉ Ordinal wallet and block explorer"
version = "0.22.2"
autotests = false
autobins = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.deb]
copyright = "The Ord Maintainers"
maintainer = "The Ord Maintainers"

[workspace]
members = [".", "crates/*"]

[workspace.package]
authors = ["The Ord Maintainers"]
edition = "2021"
homepage = "https://github.com/ordinals/ord"
license = "CC0-1.0"
repository = "https://github.com/ordinals/ord"
rust-version = "1.80.0"

[workspace.dependencies]
base64 = "0.22.0"
bitcoin = { version = "0.32.5", features = ["rand"] }
colored = "3"
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
hex = "0.4.3"
pretty_assertions = "1.2.1"
regex = "1.6.0"
reqwest = { version = "0.12.0", features = ["blocking", "json", "brotli"] }
secp256k1 = { version = "0.29.1", features = ["global-context"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_with = "3.7.0"
tempfile = "3.2.0"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["http2"] }
axum-server = "0.7.1"
base64.workspace = true
bdk_wallet = "1.1.0"
bip322 = "0.0.9"
bip39 = "2.0.0"
bitcoin.workspace = true
bitcoincore-rpc = "0.19.0"
boilerplate = { version = "1.0.0", features = ["axum"] }
brotli = "7.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
ciborium = "0.2.1"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored.workspace = true
ctrlc = { version = "3.2.1", features = ["termination"] }
derive_more.workspace = true
dirs = "6.0.0"
env_logger = "0.11.0"
futures = "0.3.21"
hex.workspace = true
html-escaper = "0.2.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.5.2", features = ["client", "http2"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2", "tokio"] }
indicatif = "0.17.1"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
mime_guess = "2.0.4"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
miniscript = "12.0.0"
mp4 = "0.14.0"
ordinals = { version = "0.0.15", path = "crates/ordinals" }
redb = "2.4.0"
ref-cast = "1.0.23"
regex.workspace = true
reqwest.workspace = true
rss = "2.0.1"
rust-embed = "8.0.0"
rustls = { version  = "0.23.20", features = ["ring"] }
rustls-acme = { version = "0.12.1", features = ["axum"] }
secp256k1.workspace = true
serde-hex = "0.1.0"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml = "0.9.17"
sha3 = "0.10.8"
snafu = "0.8.3"
sysinfo = "0.33.0"
tempfile.workspace = true
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.9"
tokio-util = {version = "0.7.3", features = ["compat"] }
tower-http = { version = "0.6.2", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
urlencoding = "2.1.3"

[dev-dependencies]
criterion = "0.5.1"
executable-path = "1.0.0"
mockcore = { path = "crates/mockcore" }
nix = { version = "0.29.0", features = ["signal"] }
pretty_assertions.workspace = true
reqwest.workspace = true
unindent = "0.2.1"

[[bin]]
name = "ord"
path = "src/bin/main.rs"

[lib]
name = "ord"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"
