[package]
name = "test-bitcoincore-rpc"
description = "Test Bitcoin Core RPC server"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/casey/ord"
repository = "https://github.com/casey/ord"

[dependencies]
bitcoin = { version = "0.29.1", features = ["serde"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde_json = "1.0.0"

[dependencies.ord-bitcoincore-rpc]
version = "0.16.3"
git = "https://github.com/casey/rust-bitcoincore-rpc"
rev = "768725a2adf3b0a8b982d200d59080d5e69df7c9"
