[package]
name = "test-bitcoincore-rpc"
description = "Test Bitcoin Core RPC server"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/casey/ord"
repository = "https://github.com/casey/ord"

[dependencies]
bitcoin = { version = "0.29.1", features = ["serde"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
ord-bitcoincore-rpc = "0.16.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.0"
