[package]
name = "mockcore"
description = "Mock Bitcoin Core RPC server"
version = "0.0.1"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bitcoin.workspace = true
hex.workspace = true
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
ord = { path = "../.."}
ord-bitcoincore-rpc = "0.19.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
